Fix urlbar alignment after firefox upgrade

--- a/firefox/.mozilla/firefox/4j7syukk.default-release/chrome/userChrome.css
+++ b/firefox/.mozilla/firefox/4j7syukk.default-release/chrome/userChrome.css
@@ -64,6 +64,7 @@
 /* URL bar */
 #urlbar {
   border-radius: var(--border-radius) 0 0 0 !important;
+  display: inherit !important;
 }
 
 /* Inner URL bar container */
